[gd_scene load_steps=7 format=3 uid="uid://vjqvfrfgfgfn"]

[ext_resource type="Script" path="res://scene/roll.gd" id="1_268e1"]
[ext_resource type="FontFile" uid="uid://b3qndl6wbql58" path="res://CastoroTitling-Regular.ttf" id="1_ci6b1"]
[ext_resource type="Script" path="res://scene/roll_butt.gd" id="2_yhk6v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8cu1v"]
bg_color = Color(0.447059, 0.109804, 0.109804, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ykvos"]
bg_color = Color(0.243137, 0.0431373, 0.0431373, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcbhw"]
bg_color = Color(0.054902, 0.00392157, 0.00392157, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_268e1")
dice = 3

[node name="roll_butt" type="Button" parent="."]
custom_minimum_size = Vector2(250, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "Roll"
script = ExtResource("2_yhk6v")

[node name="lie or truth" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.5
offset_top = -245.5
offset_right = 242.5
offset_bottom = 245.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(250, 250)
theme_override_constants/separation = 50
alignment = 1

[node name="message1" type="Label" parent="lie or truth"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 55
text = "You Rolled:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dice_num" type="Label" parent="lie or truth"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 55
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="message" type="Label" parent="lie or truth"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 60
text = "Will you lie or tell the truth about what you rolled?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ok" type="Button" parent="lie or truth"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "OK"
script = ExtResource("2_yhk6v")

[node name="decide_TOL" type="VBoxContainer" parent="lie or truth"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="truth" type="Button" parent="lie or truth/decide_TOL"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "Tell the Truth"
script = ExtResource("2_yhk6v")

[node name="lie" type="Button" parent="lie or truth/decide_TOL"]
custom_minimum_size = Vector2(250, 150)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "lie"
script = ExtResource("2_yhk6v")

[node name="they_lie" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -257.0
offset_top = -253.5
offset_right = 257.0
offset_bottom = 253.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="message2" type="Label" parent="they_lie"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 60
text = "What will you say you rolled?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="1" type="Button" parent="they_lie"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "1
"
script = ExtResource("2_yhk6v")

[node name="2" type="Button" parent="they_lie"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "2
"
script = ExtResource("2_yhk6v")

[node name="3" type="Button" parent="they_lie"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "3
"
script = ExtResource("2_yhk6v")

[node name="4" type="Button" parent="they_lie"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "4"
script = ExtResource("2_yhk6v")

[node name="5" type="Button" parent="they_lie"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ci6b1")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8cu1v")
theme_override_styles/hover = SubResource("StyleBoxFlat_ykvos")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bcbhw")
text = "5"
script = ExtResource("2_yhk6v")

[connection signal="pressed" from="roll_butt" to="." method="_on_roll_butt_pressed"]
[connection signal="pressed" from="roll_butt" to="roll_butt" method="_on_pressed"]
[connection signal="pressed" from="lie or truth/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="lie or truth/decide_TOL/truth" to="." method="_on_truth_pressed"]
[connection signal="pressed" from="lie or truth/decide_TOL/lie" to="." method="_on_lie_pressed"]
[connection signal="pressed" from="they_lie/1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="they_lie/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="they_lie/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="they_lie/4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="they_lie/5" to="." method="_on_5_pressed"]
